More Info styling ... facing an empty line stretching divs issue

--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -31,6 +31,9 @@
    color:white !important;
 
 }
+.navbar-header{
+    margin-right:0px !important;
+}
 .navbar-default .navbar-brand{
     color:white !important;
     font-size:2.3rem;
